# BountyRadar

./: .gitignore  ARCHITECTURE.md  Dockerfile  ENHANCED_PROMPT.md  api.php  api_server.py  cli.py  config.yaml  dispatcher.py  docker-compose.yml  index.html  pyproject.toml  requirements.txt  scoring.py  scraper.py  serve_local.py  server.py  vercel.json
.github/workflows/: scrape.yml
data/: tweets.json
