[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "bountyradar"
version = "1.0.0"
description = "X.com bug bounty radar — scans for payouts, CVEs, and writeups"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "BountyRadar"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "pydantic>=2.0.0",
]

[project.scripts]
sentinel = "cli:cli"

[tool.setuptools.packages.find]
include = ["sentinel*"]
